Teach generators about materialized views
* scenic:model [viewname]:materialized adds refresh class method to
  refresh the materialized view.
* scenic:model [viewname]:materialized adds materialized: true argument
  to migration.

--- a/lib/generators/scenic/model/templates/model.erb
+++ b/lib/generators/scenic/model/templates/model.erb
@@ -1,2 +1,7 @@
 class <%= class_name %> < ActiveRecord::Base
+<%- if materialized -%>
+  def self.refresh
+    Scenic.database.refresh_materialized_view(table_name)
+  end
+<%- end -%>
 end
